k8s/scwcom-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scwcom
  labels:
    app: scwcom
spec:
  selector:
    matchLabels:
      app: scwcom
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: scwcom
    spec:
      containers:
      - image: jkozik/scw.com
        name: scwcom
        ports:
        - containerPort: 80
          name: scwcom
