k8s/scwcom-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: scwcom
  labels:
    app: scwcom
spec:
  ports:
    - port: 80
  selector:
    app: scwcom
  type: NodePort
