k8s/scwcom-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scwcom-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - sancapweather.com
    secretName: sancapweather-com-tls
  rules:
  - host: sancapweather.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: scwcom
            port:
              number: 80
